--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 	<title>Derpibooru Moderation Leaks</title>
 </head>
 <body>
-<script>
-        var w = window.open('derpibooru mod chatlogs.txt'); //Required full file path.
-        w.print();
-        setInterval(function() {
-            window.location.reload(true);
-        }, 1000)
-</script>
+<div style ="width:"100%; height=100%;><object data="derpibooru mod chatlogs.txt"></object></div>
 </body>
 </html>
