--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Derpibooru Moderation Leaks</title>
 </head>
 <body>
-<div style ="width:"100%; height=100%;><object data="derpibooru mod chatlogs.txt"></object></div>
+<div><object data="derpibooru mod chatlogs.txt" width="300" height="200"></object></div>
 </body>
 </html>
