--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Derpibooru Moderation Leaks</title>
 </head>
 <body>
-<div><object data="derpibooru mod chatlogs.txt" width="300" height="200"></object></div>
+<div><object style="max-width:445px; width:100%; height:auto;" type="text/html" data="derpibooru mod chatlogs.txt">
+</object>
+
+</div>
 </body>
 </html>
