--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Derpibooru Moderation Leaks</title>
 </head>
 <body>
-<div><object style="max-width:445px; width:100%; height:auto;" type="text/html" data="derpibooru mod chatlogs.txt">
+<div><object style="max-width:100%; width:100%; height:auto;" type="text/html" data="derpibooru mod chatlogs.txt">
 </object>
 
 </div>
