--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Derpibooru Moderation Leaks</title>
 </head>
 <body>
-<div><object style="max-width:100%; width:100%; height:auto;" type="text/html" data="derpibooru mod chatlogs.txt">
-</object>
+<div style ="width:"100%; height=100%;><object style="max-width:100%; width:100%; height:auto;" type="text/html" data="derpibooru mod chatlogs.txt"></object></div>
 
-</div>
+<center><iframe width="853" height="480" src="https://www.youtube.com/embed/_7QLZElTy60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+
 </body>
 </html>
